--- a/kuva365/gast.html
+++ b/kuva365/gast.html
@@ -16,7 +16,7 @@
             <a href="#">
               <li class="nav">Гостиница</li>
             </a>
-            <a href="#">
+            <a href="prokat.html">
               <li class="nav">Прокат</li>
             </a>
             <a href="#">
