--- a/kuva365/prokat.html
+++ b/kuva365/prokat.html
@@ -13,7 +13,7 @@
           <a href="index.html"><img src="pics/logo.svg" class="logo" /></a>
         </div>
         <ul class="navbar">
-          <a href="gast.html">
+          <a href="#">
             <li class="nav">Гостиница</li>
           </a>
           <a href="prokat.html">
@@ -35,33 +35,20 @@
       </div>
     </header>
     <main>
-      <section class="utp">
-        <div class="main-text">
-          <h2 class="title-main">Приглашаем на сезон '24-25</h2>
-          <h3 class="subtitle-main">Успейте забронировать гостиницу сейчас!</h3>
-          <button class="main-btn">Забронировать</button>
+      <div class="prokat_main">
+        <h3 class="prokat-title">Наш ассортимент</h3>
+        <img src="pics/prokat-img.png" class="prokat-img" />
+        <div class="prices-prokat">
+          <h4 class="ski-price">
+            Цены на прокат:<br><br>Лыжи (спортцех, менее двух сезонов): 300р/час <br>Лыжи
+            (более двух сезонов): 250р/час
+          </h4>
+          <h4 class="ski-price">
+            Сноуборд (спортцех, менее двух сезонов): 300р/час <br> Cноуборд (более
+            двух сезонов): 250р/час
+          </h4>
         </div>
-      </section>
-      <section class="sovets">
-        <h1 class="sov-title">Советы и руководства</h1>
-        <div class="sovets-content">
-          <div class="selection">
-            <div class="selection-text">
-              <h3 class="selection-title">Подбор снаряжения</h3>
-              <h4 class="selection-subtitle">
-                Узнайте как правильно подобрать ботинки, лыжи, сноуборд и многое
-                другое!
-              </h4>
-            </div>
-          </div>
-          <div class="safety">
-            <h4 class="safety-title">Безопасность на БКД</h4>
-          </div>
-          <div class="turi">
-            <h4 class="turi-title">Туристические Склоны и Места</h4>
-          </div>
-        </div>
-      </section>
+      </div>
     </main>
     <footer class="footer">
       <div class="footer-content">
