--- a/kuva365/index.html
+++ b/kuva365/index.html
@@ -19,19 +19,13 @@
           <a href="prokat.html">
             <li class="nav">Прокат</li>
           </a>
-          <a href="#">
-            <li class="nav">Чем заняться</li>
+          <a href="news.html">
+            <li class="nav">Новости</li>
           </a>
-          <a href="#">
+          <a href="https://rtsp.me/embed/h3Ykkn7E/">
             <li class="nav">Веб-камера</li>
           </a>
         </ul>
-        <a href="login.php" class="user-link">
-          <div class="user">
-            <img src="pics/user.svg" class="user-pic" />
-            <h5 class="user-text">Личный кабинет</h5>
-          </div>
-        </a>
       </div>
     </header>
     <main>
@@ -39,13 +33,13 @@
         <div class="main-text">
           <h2 class="title-main">Приглашаем на сезон '24-25</h2>
           <h3 class="subtitle-main">Успейте забронировать гостиницу сейчас!</h3>
-          <button class="main-btn">Забронировать</button>
+          <form action="gast.html"><button class="main-btn" onclick=>Забронировать</button></form>
         </div>
       </section>
       <section class="sovets">
         <h1 class="sov-title">Советы и руководства</h1>
         <div class="sovets-content">
-          <div class="selection">
+          <a class="selection" href="https://dzen.ru/a/YYptmVTRcjDaKLo3">
             <div class="selection-text">
               <h3 class="selection-title">Подбор снаряжения</h3>
               <h4 class="selection-subtitle">
@@ -53,10 +47,10 @@
                 другое!
               </h4>
             </div>
-          </div>
-          <div class="safety">
-            <h4 class="safety-title">Безопасность на БКД</h4>
-          </div>
+          </a>
+          <a class="safety" href="https://kuva365.tilda.ws/safety">
+            <h4 class="safety-title">Безопасность на курорте</h4>
+          </a>
           <div class="turi">
             <h4 class="turi-title">Туристические Склоны и Места</h4>
           </div>
@@ -65,10 +59,12 @@
     </main>
     <footer class="footer">
       <div class="footer-content">
-        <img src="pics/logo.svg" class="logo" />
+        <div class="logo">
+            <a href="index.html"><img src="pics/logo.svg" class="logo" /></a>
+          </div>
         <div class="social">
-          <img src="pics/vk.svg" class="footer-icons" />
-          <img src="pics/tg.svg" class="footer-icons" />
+          <a href="https://vk.com/kuva365"><img src="pics/vk.svg" class="footer-icons" /></a>
+          <a href="https://t.me/s/kuva365"><img src="pics/tg.svg" class="footer-icons" /></a>
         </div>
         <h4 class="footer-num">8 (800) 55 35 35</h4>
       </div>
