--- a/kuva365/gast.html
+++ b/kuva365/gast.html
@@ -5,74 +5,106 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Кува365</title>
         <link rel="stylesheet" href="style.css"/>
+        <script src="pr.js"></script>
       </head>
 <body>
-    <header class="header">
-        <div class="header-content">
-          <div class="logo">
-            <a href="index.html"><img src="pics/logo.svg" class="logo" /></a>
-          </div>
-          <ul class="navbar">
-            <a href="#">
-              <li class="nav">Гостиница</li>
-            </a>
-            <a href="prokat.html">
-              <li class="nav">Прокат</li>
-            </a>
-            <a href="#">
-              <li class="nav">Чем заняться</li>
-            </a>
-            <a href="#">
-              <li class="nav">Веб-камера</li>
-            </a>
-          </ul>
-          <a href="login.php" class="user-link">
-            <div class="user">
-              <img src="pics/user.svg" class="user-pic" />
-              <h5 class="user-text">Личный кабинет</h5>
-            </div>
-          </a>
-        </div>
-      </header>
+  <header class="header">
+    <div class="header-content">
+      <div class="logo">
+        <a href="index.html"><img src="pics/logo.svg" class="logo" /></a>
+      </div>
+      <ul class="navbar">
+        <a href="gast.html">
+          <li class="nav">Гостиница</li>
+        </a>
+        <a href="prokat.html">
+          <li class="nav">Прокат</li>
+        </a>
+        <a href="news.html">
+          <li class="nav">Новости</li>
+        </a>
+        <a href="https://rtsp.me/embed/h3Ykkn7E/">
+          <li class="nav">Веб-камера</li>
+        </a>
+      </ul>
+    </div>
+  </header>
     <main>
-        <section class="gast-main">
-            <div class="gast-blocks">
-                <div class="gast-block">
-                    <img src="pics/1mest 1.png" class="gast-pic">
-                    <div class="text-gast" >
-                        <h3 class="title-gast">Одноместный номер</h3>
-                        <h2 class="subtitle-gast">В будние дни 2000р/сутки <br> В праздничные дни 3000р/сутки</h2>
-                        <button class="btn-gast">Забронировать</button>
-                    </div>
-                </div>
-                <div class="gast-block">
-                    <img src="pics/2mest.jpg" class="gast-pic">
-                    <div class="text-gast">
-                        <h3 class="title-gast">Двухместный номер</h3>
-                        <h2 class="subtitle-gast">В будние дни 3000р/сутки <br> В праздничные дни 4000р/сутки</h2>
-                        <button class="btn-gast">Забронировать</button>
-                    </div>
-                </div>
-                <div class="gast-block">
-                    <img src="pics/3mest.jpg" class="gast-pic">
-                    <div class="text-gast">
-                        <h3 class="title-gast">Четырёхместный номер</h3>
-                        <h2 class="subtitle-gast">В будние дни 5000р/сутки <br> В праздничные дни 7000р/сутки</h2>
-                        <button class="btn-gast">Забронировать</button>
+      <section class="gast-main">
+        <div class="gast-blocks">
+            <div class="gast-block">
+                <img src="pics/1mest 1.png" class="gast-pic">
+                <div class="text-gast">
+                    <h3 class="title-gast">Одноместный номер</h3>
+                    <h2 class="subtitle-gast">В будние дни 2000р/сутки <br> В праздничные дни 3000р/сутки</h2>
+                    <button class="btn-gast" onclick="openForm('myForm1')">Забронировать</button>
+                    <div class="form-popup" id="myForm1" style="display: none;">
+                        <form action="process_booking.php" method="POST" class="form-container">
+                            <h1 class="title-form-gast">Забронировать</h1>
+                            <div class="tele-gast">
+                                <label for="phone"><b>Телефон</b></label>
+                                <input type="text" placeholder="Введите номер телефона" name="phone" required>
+                            </div>
+                            <input type="hidden" name="room_type" value="Одноместный номер"> <!-- Скрытое поле -->
+                            <button type="submit" class="btn">Оставить заявку</button>
+                        </form>
                     </div>
                 </div>
             </div>
-        </section>
+            <div class="gast-block">
+                <img src="pics/2mest.jpg" class="gast-pic">
+                <div class="text-gast">
+                    <h3 class="title-gast">Двухместный номер</h3>
+                    <h2 class="subtitle-gast">В будние дни 3000р/сутки <br> В праздничные дни 4000р/сутки</h2>
+                    <button class="btn-gast" onclick="openForm('myForm2')">Забронировать</button>
+                    <div class="form-popup" id="myForm2" style="display: none;">
+                        <form action="process_booking.php" method="POST" class="form-container">
+                            <h1 class="title-form-gast">Забронировать</h1>
+                            <div class="tele-gast">
+                                <label for="phone"><b>Телефон</b></label>
+                                <input type="text" placeholder="Введите номер телефона" name="phone" required>
+                            </div>
+                            <input type="hidden" name="room_type" value="Двухместный номер"> <!-- Скрытое поле -->
+                            <button type="submit" class="btn">Оставить заявку</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="gast-block">
+                <img src="pics/3mest.jpg" class="gast-pic">
+                <div class="text-gast">
+                    <h3 class="title-gast">Четырёхместный номер</h3>
+                    <h2 class="subtitle-gast">В будние дни 5000р/сутки <br> В праздничные дни 7000р/сутки</h2>
+                    <button class="btn-gast" onclick="openForm('myForm3')">Забронировать</button>
+                    <div class="form-popup" id="myForm3" style="display: none;">
+                        <form action="process_booking.php" method="POST" class="form-container">
+                            <h1 class="title-form-gast">Забронировать</h1>
+                            <div class="tele-gast">
+                                <label for="phone"><b>Телефон</b></label>
+                                <input type="text" placeholder="Введите номер телефона" name="phone" required>
+                            </div>
+                            <input type="hidden" name="room_type" value="Четырёхместный номер"> <!-- Скрытое поле -->
+                            <button type="submit" class="btn">Оставить заявку</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+        
     </main>
     <footer class="footer">
-        <div class="footer-content">
-          <img src="pics/logo.svg" class="logo" />
-          <div class="social">
-            <img src="pics/vk.svg" class="footer-icons" />
-            <img src="pics/tg.svg" class="footer-icons" />
+      <div class="footer-content">
+        <div class="logo">
+            <a href="index.html"><img src="pics/logo.svg" class="logo" /></a>
           </div>
-          <h4 class="footer-num">8 (800) 55 35 35</h4>
+        <div class="social">
+          <a href="https://vk.com/kuva365"><img src="pics/vk.svg" class="footer-icons" /></a>
+          <a href="https://t.me/s/kuva365"><img src="pics/tg.svg" class="footer-icons" /></a>
         </div>
-      </footer>
+        <h4 class="footer-num">8 (800) 55 35 35</h4>
+      </div>
+    </footer>
 </body>
 </html>
