--- a/kuva365/news.html
+++ b/kuva365/news.html
@@ -28,19 +28,22 @@
         </ul>
       </div>
     </header>
-    <main>
-      <div class="prokat_main">
-        <h3 class="prokat-title">Наш ассортимент</h3>
-        <img src="pics/prokat-img.png" class="prokat-img" />
-        <div class="prices-prokat">
-          <h4 class="ski-price">
-            Цены на прокат:<br><br>Лыжи (спортцех, менее двух сезонов): 300р/час <br>Лыжи
-            (более двух сезонов): 250р/час
-          </h4>
-          <h4 class="ski-price">
-            Сноуборд (спортцех, менее двух сезонов): 300р/час <br> Cноуборд (более
-            двух сезонов): 250р/час
-          </h4>
+    <main class="news-main">
+      <h1 class="news-title">Новости</h1>
+      <div class="news-blocks">
+        <div class="mainblock-news">
+            <img src="pics/pic1.png" class="main-news">
+            <h3 class="text-main-news">Подготовка к новому горнолыжному сезону '2024-25 закончена. Осталось только дождаться зимней погоды!</h3>
+        </div>
+        <div class="seconds-blocks">
+            <div class="t-news">
+                <img src="pics/pic2.png" class="news-pic">
+                <h3 class="news-text">10 марта МЫ провели открытое первенство по горнолыжному спорту, посвященное памяти основателя ГЛК «Долина» А.Е.Чеботарева.</h3>
+            </div>
+            <div class="t-news">
+                <h3 class="news-text">25.05.2024 // Чемпионат ПФО «Параплан — приземление на точность»</h3>
+                <img src="pics/pic3.png" class="news-pic">
+            </div>
         </div>
       </div>
     </main>
