--- a/kuva365/gast.html
+++ b/kuva365/gast.html
@@ -45,7 +45,7 @@
                                 <label for="phone"><b>Телефон</b></label>
                                 <input type="text" placeholder="Введите номер телефона" name="phone" required>
                             </div>
-                            <input type="hidden" name="room_type" value="Одноместный номер"> <!-- Скрытое поле -->
+                            <input type="hidden" name="room_type" value="Одноместный номер"> 
                             <button type="submit" class="btn">Оставить заявку</button>
                         </form>
                     </div>
@@ -64,7 +64,7 @@
                                 <label for="phone"><b>Телефон</b></label>
                                 <input type="text" placeholder="Введите номер телефона" name="phone" required>
                             </div>
-                            <input type="hidden" name="room_type" value="Двухместный номер"> <!-- Скрытое поле -->
+                            <input type="hidden" name="room_type" value="Двухместный номер"> 
                             <button type="submit" class="btn">Оставить заявку</button>
                         </form>
                     </div>
@@ -83,7 +83,7 @@
                                 <label for="phone"><b>Телефон</b></label>
                                 <input type="text" placeholder="Введите номер телефона" name="phone" required>
                             </div>
-                            <input type="hidden" name="room_type" value="Четырёхместный номер"> <!-- Скрытое поле -->
+                            <input type="hidden" name="room_type" value="Четырёхместный номер"> 
                             <button type="submit" class="btn">Оставить заявку</button>
                         </form>
                     </div>
